@@ -1,3 +1,6 @@
 # kunlun-basedata-service
 
 昆仑管理系统服务调用链追踪与数据缓存
+
+# 启动JVM参数
+-Xms50m -Xmx50m -Xss512k -XX:+UseConcMarkSweepGC
