@@ -1,3 +1,6 @@
 # kunlun-gateway-service
 
 昆仑管理系统路由网关
+
+# 启动JVM参数
+-Xms50m -Xmx50m -Xss512k -XX:+UseConcMarkSweepGC
