@@ -2,5 +2,8 @@
 
 昆仑管理系统服务调用链追踪与数据缓存
 
+# 启动JVM参数
+-Xms50m -Xmx50m -Xss512k -XX:+UseConcMarkSweepGC
+
 #### 启动JVM参数
 -Xmx32M -Xms32M -XX:+PrintGCDetails -verbose:gc -Xloggc:logs/gc.log -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=logs -XX:+PrintGCApplicationStoppedTime
