@@ -1,3 +1,6 @@
 # kunlun-system-service
 
 昆仑管理系统业务服务
+
+# 启动JVM参数
+-Xms50m -Xmx50m -Xss512k -XX:+UseConcMarkSweepGC
